# OptoTwin-HIL

./: 404.html  CLAUDE.md  LICENSE  README.md  index.html  legacyNotebook.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
api/core/: index.html
api/hal/: index.html
api/trajectory/: index.html
api/twin/: index.html
architecture/: index.html
docs/: architecture.md  examples.md  getting-started.md  hardware.md  index.md
docs/api/: core.md  hal.md  trajectory.md  twin.md
examples/: 01_confocal_scan.py  01_knife_edge_diag.py  02_active_tracking.py  02_dual_area_scan.py  03_z_stack.py  MIGRATION_GUIDE.md  debug_gui.py  index.html
getting-started/: index.html
hardware/: index.html
search/: search_index.json
src/optotwin/: __init__.py
src/optotwin/core/: __init__.py  abc.py  config.py  supervisor.py  transforms.py  utils.py
src/optotwin/hal/: __init__.py  daq.py  laser.py  photodiode.py  piezo.py  temperature.py
src/optotwin/trajectory/: __init__.py  dither.py  raster.py  spiral.py  sweep.py
src/optotwin/twin/: __init__.py  models.py  optimizer.py
tests/: test_raster.py  test_trajectory.py  test_transforms.py  test_twin.py
