[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "optotwin-hil"
version = "0.1.0"
description = "Hardware-in-the-loop framework for automated confocal microscope metrology"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "nidaqmx>=0.9",
    "pyvisa>=1.13",
    "xarray>=2024.1",
    "minimalmodbus>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
qcodes = [
    "qcodes>=0.45",
]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
